--- a/Viaxar/app/src/main/res/layout/fragment_favorites.xml
+++ b/Viaxar/app/src/main/res/layout/fragment_favorites.xml
@@ -49,11 +49,15 @@
 
     <ListView
         android:id="@+id/lvPaises"
-        android:layout_width="363dp"
+        android:layout_width="match_parent"
         android:layout_height="440dp"
+        android:dividerHeight="8dp"
+        android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout"
+        app:layout_constraintVertical_bias="0.811" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
