--- a/Viaxar/app/src/main/res/layout/fragment_kit.xml
+++ b/Viaxar/app/src/main/res/layout/fragment_kit.xml
@@ -149,7 +149,8 @@
                 <Spinner
                     android:id="@+id/spInicialMedida"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#FFFFFF" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -212,7 +213,8 @@
                 <Spinner
                     android:id="@+id/spCategoria"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#FFFFFF" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -227,12 +229,14 @@
 
                         <EditText
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="match_parent"
+                            android:backgroundTint="#FFFFFF" />
 
                         <Spinner
                             android:id="@+id/spInicialRoupa"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="#FFFFFF" />
 
                     </LinearLayout>
 
@@ -255,12 +259,14 @@
 
                         <EditText
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                            android:layout_height="match_parent"
+                            android:backgroundTint="#FFFFFF" />
 
                         <Spinner
                             android:id="@+id/spFinalRoupa"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="#FFFFFF" />
 
                     </LinearLayout>
                 </LinearLayout>
@@ -298,6 +304,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="#00FFFFFF"
                     android:backgroundTint="#FFFFFF"
                     android:cacheColorHint="#FFFFFF"
                     android:foregroundTint="#FFFFFF" />
