--- a/Viaxar/app/src/main/res/drawable/convert_bg.xml
+++ b/Viaxar/app/src/main/res/drawable/convert_bg.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/cinzaexplorar" />
+            <solid android:color="#1EAAF1" />
             <corners android:radius="50dp"/>
         </shape>
     </item>
