--- a/Viaxar/app/src/main/res/layout/activity_main.xml
+++ b/Viaxar/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,11 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="64dp"
+        android:layout_width="match_parent"
+        android:layout_height="63dp"
         android:fontFamily="@font/bukhariscriptttf"
         android:text="Get started"
+        android:textAlignment="center"
         android:textColor="@color/cinzaToolbar"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -45,7 +46,7 @@
         android:layout_gravity="start"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
-        android:layout_marginBottom="172dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/button_lg"
         android:backgroundTint="#1EAAF1"
         android:enabled="true"
@@ -66,13 +67,14 @@
         android:backgroundTint="@color/cinzaToolbar"
         android:enabled="true"
         android:text="SIGN UP"
-        android:textColor="#FFFFFF"
+        android:textColor="#1EAAF1"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.797" />
+        app:layout_constraintVertical_bias="0.828" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -81,11 +83,10 @@
         android:layout_marginTop="48dp"
         app:layout_constraintBottom_toTopOf="@+id/btnTelaLogin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:layout_constraintVertical_bias="0.197"
-        app:srcCompat="@drawable/logocinzaclaro" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/novalogo" />
 
     <!--<ImageView
         android:id="@+id/imageView3"
