--- a/Viaxar/app/src/main/res/layout/activity_profile.xml
+++ b/Viaxar/app/src/main/res/layout/activity_profile.xml
@@ -80,7 +80,7 @@
                 android:textColor="#FFFFFF" />
 
             <EditText
-                android:id="@+id/edtEmail"
+                android:id="@+id/edtEmailCad"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="7dp"
