--- a/Viaxar/app/src/main/res/layout/fragment_informations.xml
+++ b/Viaxar/app/src/main/res/layout/fragment_informations.xml
@@ -25,11 +25,12 @@
 
             <TextView
                 android:id="@+id/nome_pais"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/bukhariscriptttf"
-                android:text="Edit Profile"
+                android:text="Profile"
                 android:textColor="@android:color/background_light"
                 android:textSize="35dp" />
 
@@ -38,8 +39,9 @@
                 android:layout_width="70dp"
                 android:layout_height="45dp"
                 android:layout_marginRight="0dp"
-                android:foregroundTint="#FFFFFF"
-                android:src="@drawable/ic_back" />
+                app:tint="@android:color/white"
+                android:src="@drawable/ic_perfil"
+                />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -64,7 +66,7 @@
                 android:textColor="#FFFFFF" />
 
             <EditText
-                android:id="@+id/edtEmail"
+                android:id="@+id/edtEmailCad"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="7dp"
