--- a/Viaxar/app/src/main/res/layout/pais_fav.xml
+++ b/Viaxar/app/src/main/res/layout/pais_fav.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearhorizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="110dp"
     android:layout_marginHorizontal="5dp"
     android:layout_marginVertical="5dp"
     android:background="#212121"
@@ -23,8 +23,8 @@
 
             <ImageView
                 android:id="@+id/imgBack"
-                android:layout_width="83dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:scaleType="centerCrop"
@@ -32,7 +32,7 @@
 
             <LinearLayout
                 android:id="@+id/linear"
-                android:layout_width="wrap_content"
+                android:layout_width="140dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
                 android:gravity="center_vertical"
@@ -52,7 +52,6 @@
                     android:id="@+id/tvContinente"
                     android:layout_width="181dp"
                     android:layout_height="wrap_content"
-
                     android:text="Continente"
                     android:textSize="16sp" />
 
@@ -62,27 +61,31 @@
             <LinearLayout
                 android:id="@+id/direita"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/imgCoracaoVermelho"
                     android:layout_width="45dp"
-                    android:layout_height="42dp"
+                    android:layout_height="45dp"
                     android:layout_gravity="right"
                     android:layout_marginLeft="5dp"
-                    android:layout_weight="1"
-                    android:paddingTop="6dp"
-                    android:paddingRight="6dp"
+
+                    android:paddingTop="10dp"
+                    android:paddingRight="12dp"
+                    android:paddingBottom="6dp"
                     app:srcCompat="@drawable/sim_fav"
                     app:tint="#FF4545" />
 
                 <ImageView
                     android:id="@+id/imgBandeira"
                     android:layout_width="45dp"
-                    android:layout_height="50dp"
+                    android:layout_height="33dp"
                     android:layout_marginRight="5dp"
-                    android:layout_weight="1"
+                    android:layout_marginTop="15dp"
+
+                    android:background="@drawable/flag_border"
+                    android:scaleType="centerCrop"
                     tools:srcCompat="@drawable/not_found" />
 
             </LinearLayout>
