--- a/Viaxar/app/src/main/res/values/colors.xml
+++ b/Viaxar/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0F6A98</color>
+    <color name="colorPrimary">#1EAAF1</color>
     <color name="colorPrimaryDark">#0053B8</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFF</color>
